# OGX-Mini-Plus

./: .gitignore  .gitmodules  BUILDING.md  CompileHelp.md  Controllers.md  DEPENDENCIES.md  JoypadAnalyse.md  LICENSE  README.md  RELEASE_NOTES_v1.1.1.md  blueUpdate.md  buildDebug.txt  buildErro.txt  clonePlan.txt  ds4Test.txt  ds4ToPokkenJoypad.txt  fixBluetooth.txt  joypadStudies.md  tech-implementation.md  tech-joypad.md  tech-ogx.md
!test/: 0-boot_ascii_output.txt  base.txt  (+49 more)
Firmware/RP2040/: CMakeLists.txt  pico2wDebug_Build.bat  pico2wDebug_Rec.bat  pico2w_Build.bat  pico2w_Rec.bat  picoDebug_Build.bat  picoDebug_Rec.bat  pico_Build.bat  pico_Rec.bat
Firmware/RP2040/build-debug/: .ninja_deps  .ninja_log  CMakeCache.txt  OGX-Mini-v1.1.4-PI_PICO-Debug.hex  OGX-Mini-v1.1.4-PI_PICO-Debug.uf2  bs2_default.elf.map  build.ninja  cmake_install.cmake  compile_commands.json
Firmware/RP2040/build-debug/Pico-PIO-USB/: cmake_install.cmake
Firmware/RP2040/build-debug/libfixmath/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/docs/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/boot_picoboot_headers/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/boot_uf2_headers/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/hardware_claim/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/pico_base_headers/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/pico_bit_ops_headers/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/pico_divider_headers/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/pico_stdlib_headers/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/pico_sync/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/pico_time/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/pico_usb_reset_interface_headers/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/common/pico_util/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2040/boot_stage2/: bs2_default.dis  bs2_default.elf  bs2_default_padded_checksummed.S  cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2040/hardware_regs/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2040/hardware_structs/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2040/pico_platform/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2_common/boot_bootrom_headers/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2_common/cmsis/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2_common/hardware_adc/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2_common/hardware_base/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2_common/hardware_boot_lock/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2_common/hardware_clocks/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2_common/hardware_divider/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2_common/hardware_dma/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2_common/hardware_exception/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2_common/hardware_flash/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2_common/hardware_gpio/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/src/rp2_common/hardware_i2c/: cmake_install.cmake
Firmware/RP2040/build-debug/pico-sdk/tools/: cmake_install.cmake
Firmware/RP2040/build-debug/pioasm/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  install_manifest.txt
Firmware/RP2040/cmake/: get_pico_sdk.cmake
Firmware/RP2040/src/: sdkconfig.h
Firmware/RP2040/src/Bluepad32/: Bluepad32.cpp
Firmware/RP2040/src/Board/: Config.h  board_api.cpp  board_api.h  ogxm_log.cpp  ogxm_log.h
Firmware/RP2040/src/Board/board_api_private/: board_api_private.h  board_api_usbh.cpp
Firmware/RP2040/src/Descriptors/: DS4.h  PS3.h  PS3Guitar.h  PS4.h  SwitchPro.h  XInputGuitar360.h
Firmware/RP2040/src/Gamepad/: Gamepad.h
Firmware/RP2040/src/OGXMini/: OGXMini.h
Firmware/RP2040/src/OGXMini/Board/: PicoW.cpp  Standard.cpp
Firmware/RP2040/src/TaskQueue/: TaskQueue.h
Firmware/RP2040/src/USBDevice/: DeviceManager.cpp
Firmware/RP2040/src/USBDevice/DeviceDriver/: DeviceDriverTypes.h
Firmware/RP2040/src/USBDevice/DeviceDriver/DInput/: DInput.cpp
Firmware/RP2040/src/USBDevice/DeviceDriver/DS4/: DS4.cpp  DS4.h
Firmware/RP2040/src/USBDevice/DeviceDriver/PS3/: PS3.cpp  PS3.h
Firmware/RP2040/src/USBDevice/DeviceDriver/PS4/: PS4.cpp  PS4.h
Firmware/RP2040/src/USBDevice/DeviceDriver/Switch/: Switch.cpp
Firmware/RP2040/src/USBDevice/DeviceDriver/WebApp/: WebApp.cpp  WebApp.h
Firmware/RP2040/src/USBDevice/DeviceDriver/XInput/: XInputGuitar360.cpp  XInputGuitar360.h
Firmware/RP2040/src/USBHost/: HardwareIDs.h  HostManager.h  tuh_callbacks.cpp
Firmware/RP2040/src/USBHost/HIDParser/: HIDJoystick.cpp  HIDJoystick.h
Firmware/RP2040/src/USBHost/HostDriver/: HostDriver.h  HostDriverTypes.h
Firmware/RP2040/src/USBHost/HostDriver/HIDGeneric/: HIDGeneric.cpp
Firmware/RP2040/src/USBHost/HostDriver/PS3/: PS3.cpp  PS3.h
Firmware/RP2040/src/USBHost/HostDriver/PS3Guitar/: PS3Guitar.cpp  PS3Guitar.h
Firmware/RP2040/src/USBHost/HostDriver/PS4/: PS4.cpp
Firmware/RP2040/src/USBHost/HostDriver/SwitchPro/: SwitchPro.cpp  SwitchPro.h  SwitchProCloneRecovery.cpp  SwitchProCloneRecovery.h  SwitchProRumble.cpp  SwitchProRumble.h
Firmware/RP2040/src/USBHost/HostDriver/XInput/: XboxOne.cpp  XboxOne.h
Firmware/RP2040/src/UserSettings/: UserSettings.cpp
(+176 files in other folders)
